[gd_scene load_steps=9 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://gfx/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://gfx/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://gfx/blue_button11.png" type="Texture" id=4]
[ext_resource path="res://gfx/blue_button12.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 22
font_data = ExtResource( 3 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true

[node name="DisplayText" type="Label" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 1004.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 1 )
text = "CHAI"
autowrap = true

[node name="PlayerInput" type="TextEdit" parent="."]
margin_left = 39.1623
margin_top = 511.0
margin_right = 887.162
margin_bottom = 579.0
custom_fonts/font = SubResource( 2 )

[node name="Play Button" type="TextureButton" parent="."]
margin_left = 906.38
margin_top = 510.062
margin_right = 973.38
margin_bottom = 577.062
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Play Button"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "OK"
align = 1
valign = 1
[connection signal="pressed" from="Play Button" to="." method="_on_Play_Button_pressed"]
